c_lib/source/include/libphonenumber_sys_c_phonemetadata.h

LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_new_no_args();
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_no_international_dialling(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_number_format_index(const i18n::phonenumbers::PhoneMetadata* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT const google::protobuf::RepeatedPtrField< i18n::phonenumbers::NumberFormat >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_number_format_no_args(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_number_format_size(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_operator_assign(i18n::phonenumbers::PhoneMetadata* this_ptr, const i18n::phonenumbers::PhoneMetadata* from);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_pager(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_personal_number(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_preferred_extn_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_preferred_international_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_premium_rate(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_carrier_specific(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_emergency(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_fixed_line(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_general_desc(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_id(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_leading_digits(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_mobile(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_national_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_national_prefix_for_parsing(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_national_prefix_transform_rule(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_no_international_dialling(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_pager(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_personal_number(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_preferred_extn_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_preferred_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_premium_rate(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_shared_cost(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_short_code(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_standard_rate(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_toll_free(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_uan(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_voicemail(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_voip(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_same_mobile_and_fixed_line_pattern(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_carrier_specific(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* carrier_specific);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_emergency(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* emergency);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_fixed_line(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* fixed_line);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_general_desc(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* general_desc);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_id(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* id);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* international_prefix);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_leading_digits(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* leading_digits);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_mobile(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* mobile);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_national_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* national_prefix);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_national_prefix_for_parsing(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* national_prefix_for_parsing);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_national_prefix_transform_rule(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* national_prefix_transform_rule);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_no_international_dialling(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* no_international_dialling);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_pager(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* pager);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_personal_number(i18n::phonenumbers::PhoneMetadata* this_ptr, i18n::phonenumbers::PhoneNumberDesc* personal_number);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_preferred_extn_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* preferred_extn_prefix);