src/ffi.rs

  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_new_no_args
    ()
      -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_no_international_dialling
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_number_format_index
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     index: libc::c_int)
     -> *const ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_number_format_no_args
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::repeated_field::google::protobuf::RepeatedPtrFieldNumberFormatRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_number_format_size(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_operator_assign
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_pager
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_personal_number
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_preferred_extn_prefix
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_preferred_international_prefix
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_premium_rate
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_carrier_specific
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_emergency
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_fixed_line
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_general_desc
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_id
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_international_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_leading_digits
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_mobile
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_national_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_national_prefix_for_parsing
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_national_prefix_transform_rule
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_no_international_dialling
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_pager
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_personal_number
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_preferred_extn_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_preferred_international_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_premium_rate
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_shared_cost
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_short_code
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_standard_rate
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_toll_free
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_uan
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_voicemail
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_release_voip
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_same_mobile_and_fixed_line_pattern(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_carrier_specific(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, carrier_specific: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_emergency(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, emergency: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_fixed_line(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, fixed_line: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_general_desc(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, general_desc: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_id(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, id: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_international_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, international_prefix: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_leading_digits(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, leading_digits: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_mobile(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, mobile: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_national_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, national_prefix: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_national_prefix_for_parsing(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, national_prefix_for_parsing: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_national_prefix_transform_rule(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, national_prefix_transform_rule: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_no_international_dialling(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, no_international_dialling: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_pager(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, pager: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_personal_number(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, personal_number: *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_set_allocated_preferred_extn_prefix(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata, preferred_extn_prefix: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
